--- a/src/GUI/Views/StatsValidator/StatsValidatorEntryView.xaml
+++ b/src/GUI/Views/StatsValidator/StatsValidatorEntryView.xaml
@@ -3,6 +3,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:adonisui="clr-namespace:AdonisUI;assembly=AdonisUI"
+	xmlns:controls="clr-namespace:DivinityModManager.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:DivinityModManager.Views.StatsValidator"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,7 +11,7 @@
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
-	<TextBlock
+	<controls:SelectableTextBlock
 		x:Name="MessageTextBlock"
 		HorizontalAlignment="Stretch"
 		VerticalAlignment="Stretch"
