--- a/src/GUI/Views/StatsValidator/StatsValidatorFileEntryView.xaml
+++ b/src/GUI/Views/StatsValidator/StatsValidatorFileEntryView.xaml
@@ -2,6 +2,7 @@
 	x:Class="DivinityModManager.Views.StatsValidator.StatsValidatorFileEntryView"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:DivinityModManager.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:DivinityModManager.Views.StatsValidator"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,5 +10,5 @@
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
-	<TextBlock x:Name="NameTextBlock" />
+	<controls:SelectableTextBlock x:Name="NameTextBlock" />
 </local:StatsValidatorFileEntryViewBase>
