Tweak download bar layout / cancel button

--- a/src/GUI/Views/ModUpdatesLayout.xaml
+++ b/src/GUI/Views/ModUpdatesLayout.xaml
@@ -186,7 +186,7 @@
                     <Button
                         x:Name="UpdateButton"
                         Padding="8,2"
-                        Content="Updated Selected Mods" />
+                        Content="Update Selected Mods" />
                 </StackPanel>
             </Grid>
         </controls:AutoGrid>
