--- a/src/GUI/Views/Main/HorizontalModLayout.xaml
+++ b/src/GUI/Views/Main/HorizontalModLayout.xaml
@@ -1,5 +1,5 @@
 <local:HorizontalModLayoutBase
-	x:Class="DivinityModManager.Views.HorizontalModLayout"
+	x:Class="DivinityModManager.Views.Main.HorizontalModLayout"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:adonisUI="clr-namespace:AdonisUI;assembly=AdonisUI"
@@ -8,7 +8,7 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:data="clr-namespace:DivinityModManager.Models;assembly=DivinityModManagerCore"
 	xmlns:dd="urn:gong-wpf-dragdrop"
-	xmlns:local="clr-namespace:DivinityModManager.Views"
+	xmlns:local="clr-namespace:DivinityModManager.Views.Main"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:reactiveui="clr-namespace:ReactiveUI;assembly=ReactiveUI"
 	xmlns:views="clr-namespace:DivinityModManager.Controls.Views"
