--- a/src/GUI/Views/Main/MainViewControl.xaml
+++ b/src/GUI/Views/Main/MainViewControl.xaml
@@ -1,5 +1,5 @@
 ﻿<local:MainViewControlViewBase
-    x:Class="DivinityModManager.Views.MainViewControl"
+    x:Class="DivinityModManager.Views.Main.MainViewControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:adonisControls="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
@@ -13,7 +13,7 @@
     xmlns:dd="urn:gong-wpf-dragdrop"
     xmlns:dutil="clr-namespace:DivinityModManager.Util;assembly=DivinityModManagerCore"
     xmlns:ext="clr-namespace:DivinityModManager.Controls.Extensions"
-    xmlns:local="clr-namespace:DivinityModManager.Views"
+    xmlns:local="clr-namespace:DivinityModManager.Views.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:reactiveui="http://reactiveui.net"
     xmlns:vm="clr-namespace:DivinityModManager.ViewModels"
