--- a/src/GUI/Views/Main/DeleteFilesConfirmationView.xaml
+++ b/src/GUI/Views/Main/DeleteFilesConfirmationView.xaml
@@ -1,5 +1,5 @@
 ﻿<local:DeleteFilesConfirmationViewBase
-    x:Class="DivinityModManager.Views.DeleteFilesConfirmationView"
+    x:Class="DivinityModManager.Views.Main.DeleteFilesConfirmationView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:adonisUI="clr-namespace:AdonisUI;assembly=AdonisUI"
@@ -9,10 +9,13 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:data="clr-namespace:DivinityModManager.Models;assembly=DivinityModManagerCore"
     xmlns:dd="urn:gong-wpf-dragdrop"
-    xmlns:local="clr-namespace:DivinityModManager.Views"
+    xmlns:local="clr-namespace:DivinityModManager.Views.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:reactiveui="http://reactiveui.net"
-    xmlns:vm="clr-namespace:DivinityModManager.ViewModels"
+    xmlns:vm="clr-namespace:DivinityModManager.ViewModels.Main"
+    d:DataContext="{d:DesignInstance Type=vm:DeleteFilesViewModel}"
+	d:DesignHeight="450"
+    d:DesignWidth="800"
     xmlns:xc="http://schemas.xceed.com/wpf/xaml/toolkit"
     mc:Ignorable="d">
     <xc:BusyIndicator x:Name="ProgressIndicator" Style="{StaticResource BusyIndicatorProgressStyle}">
