--- a/src/GUI/Views/Main/ModUpdatesLayout.xaml
+++ b/src/GUI/Views/Main/ModUpdatesLayout.xaml
@@ -1,5 +1,5 @@
 ﻿<local:ModUpdatesLayoutBase
-    x:Class="DivinityModManager.Views.ModUpdatesLayout"
+    x:Class="DivinityModManager.Views.Main.ModUpdatesLayout"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:adonisUI="clr-namespace:AdonisUI;assembly=AdonisUI"
@@ -9,13 +9,15 @@
     xmlns:dapp="clr-namespace:DivinityModManager;assembly=DivinityModManagerCore"
     xmlns:data="clr-namespace:DivinityModManager.Models;assembly=DivinityModManagerCore"
     xmlns:dd="urn:gong-wpf-dragdrop"
-    xmlns:local="clr-namespace:DivinityModManager.Views"
+    xmlns:local="clr-namespace:DivinityModManager.Views.Main"
+    xmlns:mm="clr-namespace:DivinityModManager;assembly=DivinityModManagerCore"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:reactiveui="http://reactiveui.net"
     xmlns:views="clr-namespace:DivinityModManager.Controls.Views"
     xmlns:vm="clr-namespace:DivinityModManager.ViewModels.Main"
+    d:DataContext="{d:DesignInstance Type=vm:DesignModUpdatesViewModel, IsDesignTimeCreatable=True}"
     d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignWidth="1000"
     mc:Ignorable="d">
     <UserControl.Resources>
         <Style
@@ -46,11 +48,14 @@
                     Foreground="{DynamicResource {x:Static adonisUI:Brushes.ForegroundBrush}}"
                     FontSize="24"
                     Padding="0,2"
-                    Text="Mod Updates"
+                    Text="{Binding TotalUpdates, StringFormat={}Mod Updates ({0}), FallbackValue='Mod Updates'}"
+                    x:Name="ViewTitleTextBlock"
                     TextAlignment="Center" />
                 <Rectangle Height="2" Fill="LightGray" />
             </StackPanel>
             <views:ModListView
+                Grid.IsSharedSizeScope="True"
+                ItemsSource="{Binding Updates}"
                 x:Name="UpdatesModListView"
                 BorderThickness="0"
                 GridViewColumnHeader.Click="SortModUpdatesGridView"
@@ -61,7 +66,7 @@
                         AllowsColumnReorder="True"
                         ColumnHeaderContainerStyle="{StaticResource GridViewLeftContainerStyle}">
                         <GridView.Columns>
-                            <GridViewColumn Width="40" HeaderContainerStyle="{StaticResource GridViewCenteredContainerStyle}">
+                            <GridViewColumn Width="Auto" HeaderContainerStyle="{StaticResource GridViewCenteredContainerStyle}">
                                 <GridViewColumn.Header>
                                     <CheckBox
                                         x:Name="ModUpdatesCheckboxHeader"
@@ -72,6 +77,7 @@
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
                                         <CheckBox
+                                            Margin="-16,0,0,0"
                                             HorizontalAlignment="Center"
                                             VerticalAlignment="Center"
                                             IsChecked="{Binding IsSelected}" />
@@ -79,7 +85,7 @@
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                             <GridViewColumn
-                                Width="400"
+                                Width="240"
                                 Header="Name"
                                 HeaderTemplate="{StaticResource GridViewTextblockHeaderTemplate}">
                                 <GridViewColumn.CellTemplate>
@@ -89,7 +95,7 @@
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                             <GridViewColumn
-                                Width="100"
+                                Width="120"
                                 Header="Author"
                                 HeaderTemplate="{StaticResource GridViewTextblockHeaderTemplate}">
                                 <GridViewColumn.CellTemplate>
@@ -99,7 +105,7 @@
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                             <GridViewColumn
-                                Width="80"
+                                Width="60"
                                 Header="Current"
                                 HeaderTemplate="{StaticResource GridViewTextblockHeaderTemplate}">
                                 <GridViewColumn.HeaderContainerStyle>
@@ -114,7 +120,7 @@
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
                             <GridViewColumn
-                                Width="80"
+                                Width="60"
                                 Header="New"
                                 HeaderTemplate="{StaticResource GridViewTextblockHeaderTemplate}">
                                 <GridViewColumn.HeaderContainerStyle>
@@ -130,21 +136,6 @@
                             </GridViewColumn>
                             <GridViewColumn
                                 Width="100"
-                                Header="Update Date"
-                                HeaderTemplate="{StaticResource GridViewTextblockHeaderTemplate}">
-                                <GridViewColumn.HeaderContainerStyle>
-                                    <Style BasedOn="{StaticResource GridViewLeftContainerStyle}" TargetType="{x:Type GridViewColumnHeader}">
-                                        <Setter Property="Control.ToolTip" Value="Update Date" />
-                                    </Style>
-                                </GridViewColumn.HeaderContainerStyle>
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <TextBlock Text="{Binding UpdateDateText}" ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                            <GridViewColumn
-                                Width="80"
                                 Header="Source"
                                 HeaderTemplate="{StaticResource GridViewTextblockHeaderTemplate}">
                                 <GridViewColumn.HeaderContainerStyle>
@@ -160,9 +151,44 @@
                                                 CommandParameter="{Binding UpdateLink}"
                                                 Foreground="Lime"
                                                 NavigateUri="{Binding UpdateLink}">
-                                                <TextBlock Text="{Binding SourceText}" />
+                                                <Grid>
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="20" />
+                                                        <ColumnDefinition Width="*" SharedSizeGroup="SourceTextColumn" />
+                                                    </Grid.ColumnDefinitions>
+                                                    <ContentControl HorizontalAlignment="Left">
+                                                        <ContentControl.Style>
+                                                            <Style TargetType="ContentControl">
+                                                                <Style.Triggers>
+                                                                    <DataTrigger Binding="{Binding Source}" Value="{x:Static mm:ModSourceType.GITHUB}">
+                                                                        <Setter Property="Content" Value="{StaticResource GitHubIcon}"/>
+                                                                    </DataTrigger>
+                                                                    <DataTrigger Binding="{Binding Source}" Value="{x:Static mm:ModSourceType.NEXUSMODS}">
+                                                                        <Setter Property="Content" Value="{StaticResource NexusModsIcon}"/>
+                                                                    </DataTrigger>
+                                                                </Style.Triggers>
+                                                            </Style>
+                                                        </ContentControl.Style>
+                                                    </ContentControl>
+                                                    <TextBlock Grid.Column="1" Text="{Binding SourceText}" />
+                                                </Grid>
                                             </Hyperlink>
                                         </TextBlock>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn
+                                Width="Auto"
+                                Header="Update Date"
+                                HeaderTemplate="{StaticResource GridViewTextblockHeaderTemplate}">
+                                <GridViewColumn.HeaderContainerStyle>
+                                    <Style BasedOn="{StaticResource GridViewLeftContainerStyle}" TargetType="{x:Type GridViewColumnHeader}">
+                                        <Setter Property="Control.ToolTip" Value="Update Date" />
+                                    </Style>
+                                </GridViewColumn.HeaderContainerStyle>
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding UpdateDateText}" ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
