Add stats validation service, track time taken
StatsValidatorService will try and load the base mod data first, then preserve it use it as a base for new validation tasks, in order to speed up subsequent validations. This may require some testing to make sure the cloned objects are really working correctly

--- a/src/GUI/Windows/StatsValidatorWindow.xaml
+++ b/src/GUI/Windows/StatsValidatorWindow.xaml
@@ -63,12 +63,25 @@
 					Rows="auto,auto,*">
 
 					<Border HorizontalAlignment="Stretch" Background="{DynamicResource {x:Static adonisUI:Brushes.Layer3BackgroundBrush}}">
-						<TextBlock
-							x:Name="TitleTextBlock"
-							FontSize="24"
-							Text="Results"
-							TextAlignment="Center"
-							TextWrapping="Wrap" />
+						<StackPanel Orientation="Vertical">
+							<TextBlock
+								x:Name="TitleTextBlock"
+								FontSize="24"
+								Text="Results"
+								TextAlignment="Center"
+								TextWrapping="Wrap" />
+							<TextBlock
+								FontSize="12"
+								TextAlignment="Center"
+								TextWrapping="Wrap">
+								<Run Text="Time Taken:" />
+								<Run
+									x:Name="TimeTakenTextControl"
+									Foreground="Orange"
+									Text="00:02:32" />
+							</TextBlock>
+						</StackPanel>
+
 					</Border>
 
 					<TextBlock
