--- a/src/GUI/ModManager/App.axaml
+++ b/src/GUI/ModManager/App.axaml
@@ -16,6 +16,7 @@
 	</Application.Resources>
 
 	<Application.Styles>
+		<StyleInclude Source="avares://AsyncImageLoader.Avalonia/AdvancedImage.axaml" />
 		<ui:FluentAvaloniaTheme CustomAccentColor="Coral" PreferSystemTheme="False" />
 	</Application.Styles>
 </Application>
