--- a/src/GUI/ModManager/Views/StatsValidator/StatsValidatorLineView.axaml
+++ b/src/GUI/ModManager/Views/StatsValidator/StatsValidatorLineView.axaml
@@ -5,13 +5,15 @@
 	xmlns:controls="clr-namespace:ModManager.Controls"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:vm="using:ModManager.Models.View"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
+	x:DataType="vm:StatsValidatorLineText"
 	mc:Ignorable="d">
 	<controls:HighlightingTextBlock
 		x:Name="LineTextBlock"
 		Padding="4"
 		HighlightBackground="Transparent"
 		HighlightForeground="OrangeRed"
-		Text="Line Text" />
+		Text="{Binding Text}" />
 </UserControl>
