--- a/src/GUI/ModManager/Views/Main/ModOrderView.axaml
+++ b/src/GUI/ModManager/Views/Main/ModOrderView.axaml
@@ -4,17 +4,18 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:rxui="http://reactiveui.net"
 	xmlns:vm="using:ModManager.ViewModels.Main"
-	d:DesignHeight="450"
-	d:DesignWidth="800"
 	x:DataType="vm:ModOrderViewModel"
 	mc:Ignorable="d">
-	<Grid RowDefinitions="auto,*">
+	<Grid RowDefinitions="auto,auto,*">
+		<rxui:ViewModelViewHost ViewModel="{Binding CommandBar}" />
 		<TextBlock
+			Grid.Row="1"
 			HorizontalAlignment="Center"
 			FontSize="24"
 			Foreground="Turquoise"
 			Text="Mods" />
-		<TreeDataGrid Grid.Row="1" Source="{Binding ActiveModsSource}" />
+		<TreeDataGrid Grid.Row="2" Source="{Binding ActiveModsSource}" />
 	</Grid>
 </UserControl>
