--- a/src/GUI/ModManager/Styling/Resources.axaml
+++ b/src/GUI/ModManager/Styling/Resources.axaml
@@ -1,4 +1,10 @@
 <ResourceDictionary
 	xmlns="https://github.com/avaloniaui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:ui="using:FluentAvalonia.UI.Controls" />
+	xmlns:controls="using:ModManager.Controls"
+	xmlns:ui="using:FluentAvalonia.UI.Controls">
+	<!--<ControlTheme
+		x:Key="{x:Type controls:ComboBoxWithRightClick}"
+		BasedOn="{StaticResource {x:Type ComboBox}}"
+		TargetType="controls:ComboBoxWithRightClick" />-->
+</ResourceDictionary>
